--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
             }
 
             .header-menu-mobile {
-                background-color: #F8F8F8 !important;
+                background-color: #000000 !important;
             }
 
             .header-menu-wrapper {
-                background-color: #F8F8F8 !important;
+                background-color: #000000 !important;
             }
 
             div#kt_header_mobile .dropdown.show .dropdown-menu.p-0.m-0.dropdown-menu-right.dropdown-menu-anim-up.dropdown-menu-lg.show {
@@ -90,11 +90,11 @@
         }
 
         .header-mobile .burger-icon span::after {
-            background-color: #757F8B !important;
+            background-color: #fff !important;
         }
 
         .header-mobile {
-            background-color: #fff !important;
+            background-color: #000000 !important;
         }
 
         .burger-icon:hover span::after {
@@ -103,16 +103,16 @@
 
         .header-mobile .burger-icon span::before,
         .header-mobile .burger-icon span::after {
-            background-color: #757F8B;
+            background-color: #ffffff;
         }
 
         .header-mobile .burger-icon span::before,
         .header-mobile .burger-icon span::after {
-            background-color: #757F8B;
+            background-color: #fff;
         }
 
         .header-mobile .burger-icon span::after {
-            background-color: #757F8B;
+            background-color: #fff;
         }
 
         .navbar-collapse {
@@ -128,7 +128,7 @@
 
             .header-mobile .burger-icon span::before,
             .header-mobile .burger-icon span::after {
-                background-color: #757F8B;
+                background-color: #fff;
             }
 
             .d-block2 {
@@ -136,7 +136,7 @@
             }
 
             .header-mobile .burger-icon span {
-                background-color: #757F8B;
+                background-color: #fff;
             }
 
             .header-mobile .burger-icon:hover span {
@@ -922,7 +922,7 @@
                                     <!--begin::Header Nav-->
                                     <ul class="menu-nav mt-6 mb-5">
 
-                                        <li class="menu-item  active "><a href="https://staging.paruluniversity.ac.in/program_list" class="menu-link"><span class="menu-text  active ">Courses</span></a>
+                                        <li class="menu-item  active "><a href="https://staging.paruluniversity.ac.in/program_list" class="menu-link"><span class="menu-text  active ">Programs</span></a>
 
                                         </li>
                                         
@@ -1066,7 +1066,7 @@
                         </form>
                         <div class="collapse " id="programs">
                             <h3 class="coursehead mt-15 mb-8">
-                                Course Level
+                                Program Level
                             </h3>
                             <div class="mb-10">
                                                                     <input type="radio" class="btn-check course_level" name="course_level" value="4" id="4" autocomplete="off">
@@ -1092,7 +1092,7 @@
                                 <div class="row collapse " id="programs">
                                     <div class="col-lg-6 col-md-6 col-sm-12 mb-10">
                                         <h3 class="coursehead mb-5 text-left">
-                                            Course
+                                            Program
                                         </h3>
                                         <div class="form-group fv-plugins-icon-container has-success">
                                             <select class="form-control course_selection select2 select2-hidden-accessible" id="kt_select2_1" name="course" style="width:100%
