--- a/index.html
+++ b/index.html
@@ -1243,9 +1243,9 @@
 
       <div class="col-md-6 offset-md-1 mb-2">
    
-        <img src="pu-logo.png" alt="logo" srcset="" width="250px">
+        <img src="footer-logo.png" alt="logo" srcset="" width="250px">
         <p class="mt-3">
-          <strong>Parul University</strong> <br>
+        
           P.O. Limda, <br>
           Ta. Waghodia – 391760 <br>
           Dist. Vadodara, <br>
