--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         }
 
         .header-menu .menu-nav>.menu-item>.menu-link .menu-text.active {
-            color: #ED1B23 !important;
+            color: #ffffff !important;
         }
 
         .header-menu .menu-nav>.menu-item>.menu-link .menu-text.hover {
-            color: #ED1B23 !important;
+            color: #ffffff !important;
         }
 
         @media  screen and (min-width: 320px) and (max-width: 886px) {
@@ -920,7 +920,7 @@
                                 <!--begin::Header Menu-->
                                 <div id="kt_header_menu" class="header-menu header-menu-left header-menu-mobile  header-menu-layout-default ">
                                     <!--begin::Header Nav-->
-                                    <ul class="menu-nav mt-6 mb-5">
+                                    <ul class="menu-nav mt-3 mb-5">
 
                                         <li class="menu-item  active "><a href="https://staging.paruluniversity.ac.in/program_list" class="menu-link"><span class="menu-text  active ">Programs</span></a>
 
@@ -928,7 +928,7 @@
                                         
                                                                                     <li class="menu-item">
                                                 <a href="https://staging.paruluniversity.ac.in/student/login" class="menu-link d-block d-md-block">
-                                                    <span class="menu-text">Log in</span>
+                                                    <span class="menu-text btn btn-login">Log in</span>
                                                 </a>
                                             </li>
                                                                             </ul>
@@ -949,7 +949,7 @@
                 <section class="course-heading">
                     <div class="container px-4 pt-5 mb-5 text-center course-title">
                             <h2 class="mb-4 mt-md-5 display-1 fw-bold">Diploma in
-                              <span class="position-relative z-index-9" >Architecture. </span>
+                              <span class="position-relative z-index-9" >Architecture </span>
                                 <!-- SVG END -->
                               </span>
                             </h2>
